	  now for those with dirty build directories. Will remove later.

2000-05-27  Bibek Sahu <scorpio@dodds.net>

	* server/gnocatan-server.c: added a little debugging output.  Will
	be useful soon for network configuration.

	* server/Makefile.am, server/gnocatan-server.c,
	server/gnocatan-server.h, server/gnocatan-server-gtk.c,
	server/gnocatan-server-console.c: Made as much code as possible
	common between the two servers.

	* server/Makefile.am: removed line where console server was being
	linked against common gtk code.

2000-05-27  Steve Langasek <vorlon@dodds.net>

	* server/server.c, server/mt_rand.[ch], server/Makefile.am,
	configure.in: Switched to using the Mersenne Twister for our
	PRNG; should give better dice rolls.

2000-05-25  Steve Langasek <vorlon@dodds.net>

	* configure.in, acconfig.h: Set up for the use of glib's grand()
	function as a better PRNG.

	* client/client.c: Squashed that nasty robber bug.  If it comes
	back to life, we know it's a roach.

2000-05-22  Andy Heroff <aheroff@mediaone.net>

	* server/buildutils.c: Removed longest road debug define to prevent
	spamming the server's console. The debug code is still in there.

	* client/gui.c: Built a settings dialog. It only has one setting,
	and it doesn't work yet. That's next.

2000-05-22  Roderick Schertler <roderick@argon.org>

	* client/player.c: Added player's total victory points to the stat
	window

	* common/network.c: Fixed name resolution code to honor hostnames
	that begin with a digit

2000-05-18  Steve Langasek <vorlon@dodds.net>

	* server/gnocatan-server-console.c: Plugged in getopt() support so
	that the user has (some) control over the game settings in the
	console server.  Documentation later.

2000-05-17  Bibek Sahu <scorpio@dodds.net>

	* server/gnocatan-server-console.c: removed game_list_item_t
	structure.  The params structure stores a title, so just use that
	instead.  Original filename is not all that relevant; if it becomes